--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs-extra": "^9.0.0",
     "pretty-bytes": "^5.3.0",
     "pretty-ms": "^7.0.0",
+    "subtitle": "^2.0.3",
     "yargs": "^15.3.1"
   }
 }
