--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pretty-bytes": "^5.3.0",
     "pretty-ms": "^7.0.0",
     "subtitle": "^2.0.3",
+    "trash": "^7.1.0",
     "yargs": "^15.3.1"
   }
 }
