--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "enquire-simple": "^2.4.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^9.0.0",
+    "glob": "^7.1.7",
     "pretty-bytes": "^5.3.0",
     "pretty-ms": "^7.0.0",
     "subtitle": "^2.0.3",
